# Kung-Fu-Chess

./: .gitignore  CMakeLists.txt  main.cpp  main_logic.cpp
LOGIC/: CMakeLists.txt
LOGIC/include/engine/: GameEngine.hpp
LOGIC/include/input/: Controller.hpp
LOGIC/include/io/: board_parser.hpp
LOGIC/include/model/: game_snapshot.hpp  piece.hpp  piece_removed_info.hpp  position.hpp
LOGIC/include/realtime/: Motion.hpp  RealTimeArbiter.hpp
LOGIC/include/rules/: BishopRule.hpp  KingRule.hpp  KnightRule.hpp  PieceRule.hpp  RookRule.hpp  RuleEngine.hpp
LOGIC/include/scoring/: score_service.hpp
LOGIC/src/engine/: GameEngine.cpp
LOGIC/src/input/: Controller.cpp
LOGIC/src/model/: board.cpp  game_snapshot.cpp  piece.cpp  position.cpp
LOGIC/src/realtime/: RealTimeArbiter.cpp  motion.cpp
LOGIC/src/rules/: KingRule.cpp  PawnRule.cpp  PieceRule.cpp  RookRule.cpp  RuleEngine.cpp
LOGIC/src/scoring/: score_service.cpp
LOGIC/tests/: bishop_rule_tests.cpp  game_engine_tests.cpp  king_rule_tests.cpp  parser_tests.cpp  piece_tests.cpp  position_tests.cpp  printer_tests.cpp  real_time_arbiter_tests.cpp  rook_rule_tests.cpp
SERVER/: CMakeLists.txt
SERVER/include/application/: client_state.hpp  server_application.hpp
SERVER/include/auth/: auth_service.hpp
SERVER/include/database/: databaseManager.hpp
SERVER/include/events/: event_bus.hpp
SERVER/include/game/: game_session.hpp
SERVER/include/protocol/: json_protocol.hpp
SERVER/include/rating/: elo_service.hpp
SERVER/include/repositories/: userRepository.hpp
SERVER/include/tables/: user_class.hpp
SERVER/src/: main.cpp
SERVER/src/application/: server_application.cpp
SERVER/src/auth/: auth_service.cpp
SERVER/src/database/: databaseManager.cpp
SERVER/src/game/: game_session.cpp
SERVER/src/protocol/: json_protocol.cpp
SERVER/src/rating/: elo_service.cpp
SERVER/src/repositories/: userRepository.cpp
UI/: CMakeLists.txt
UI/include/application/: ui_application.hpp
UI/include/input/: mouse_input.hpp
UI/include/network/: server_game_state.hpp  websocket_client.hpp
UI/include/protocol/: client_protocol.hpp
UI/include/render/: renderer.hpp
UI/src/: img.cpp  main.cpp  render_model.cpp  render_model.hpp  renderer.cpp  renderer.hpp
UI/src/application/: ui_application.cpp
UI/src/input/: mouse_input.cpp
UI/src/network/: server_game_state.cpp  websocket_client.cpp
UI/src/protocol/: client_protocol.cpp
UI/src/render/: img.cpp  render_model.cpp  renderer.cpp
coverage_report/: index.BishopRule.cpp.c3271541bc0e846e875d125d11b620ea.html  index.BoardMapper.cpp.ab25b68cc3e6dab80e05b4bec3a70933.html  index.Controller.cpp.cacc4e819b2d117580765ee560d7086b.html  index.GameEngine.cpp.17a48c2be36db8df51f297d37d9dc463.html  index.KingRule.cpp.0cda2893b8306620ebe233c8edc7b623.html  index.KnightRule.cpp.869e12fb18ee595335aec44991c47151.html  index.PawnRule.cpp.b880eee41473078dba10665ac72e6f36.html  index.PieceRule.cpp.17e43a3b8593d311686ec347a98feacf.html  index.PieceRule.hpp.9d63866b7355e227ffa32596a4194b44.html  index.QueenRule.cpp.23277fa81ff29c68fc9edbdc7031d6ae.html  index.RealTimeArbiter.cpp.a2a1f6e37ee1721ee79ba3d5b3d0699d.html  index.RealTimeArbiter.hpp.f31484dd91b600abe076a84048724cb4.html  index.RookRule.cpp.f4ee18f8930ec4a03abd5320e8265f0a.html  index.RuleEngine.cpp.83a67ab5b3d28b2c0c819b9eda31a66a.html  index.bishop_rule_tests.cpp.e130b9ccfb3fc19d1e2c05f363125307.html  index.board.cpp.b2d518293159b87e6f8e73ba1501bf47.html  index.board.hpp.a475c3162472686818cba3ae0ae50c6a.html  index.board_mapper.cpp.33d52239f3317585eb2efe4168ded9f5.html  index.board_parser.cpp.b5c4c0365b77a783bd1048de6986f610.html  index.board_printer.cpp.3d3e72de30f63354ebf397e343dcd350.html  index.board_tests.cpp.7ddddd0b120411f8e2b6d1d45a2a7cef.html  index.controller_tests.cpp.11482318ab096528092c0c3ec8cac284.html  index.functions.html  index.game_engine_tests.cpp.2ef1ca72ead3d882e79a6a14946a7511.html  index.html  index.king_rule_tests.cpp.09f815e0652d57b81ac5cfc6fd721b20.html  index.knight_rule_tests.cpp.64f93f7ff0c3caf18c5fd95b9fce73e5.html  index.motion.cpp.4f022ad02502e673b219e1d8ee815417.html  index.motion_tests.cpp.2170ac82a3eb4f59125bbc53c963295a.html  index.parser_tests.cpp.ea1ea57fc9821985c541efef7e69e06d.html  index.pawn_rule_tests.cpp.2898d37bd10edda96f71483cf5bf6a7a.html  index.piece.cpp.7907825c274ad2d0cf0c2e83c7f361fa.html  index.piece_rule_tests.cpp.11112dc35cb3f5a1ab8f64ba72c43f53.html  index.piece_tests.cpp.aef7e7801b99abca314db4f2649a9fd5.html  index.position.cpp.f15963f341a7f9308839da4e381f191b.html  index.position_tests.cpp.27d74ba1baf6d9290a98a8ba258fda89.html  index.printer_tests.cpp.5088715011c3a774ee9187f5202da139.html  index.queen_rule_tests.cpp.2a069a614b8207f5a4f9c6c214cc031a.html  index.real_time_arbiter_tests.cpp.1165063ba637c10960d642b330ff9afc.html  index.rook_rule_tests.cpp.998edb64bdc126deca4058a135d3a909.html  (+1 more)
include/engine/: GameEngine.hpp
include/input/: BoardMapper.hpp  Controller.hpp
include/io/: board_parser.hpp  board_printer.hpp
include/model/: board.hpp  piece.hpp  position.hpp
include/realtime/: Motion.hpp  RealTimeArbiter.hpp
include/rules/: PawnRule.hpp  QueenRule.hpp  RuleEngine.hpp
src/engine/: GameEngine.cpp
src/input/: BoardMapper.cpp  Controller.cpp
src/io/: board_parser.cpp  board_printer.cpp
src/model/: board.cpp  piece.cpp
src/realtime/: RealTimeArbiter.cpp  motion.cpp
src/rules/: BishopRule.cpp  KnightRule.cpp  PawnRule.cpp  PieceRule.cpp  QueenRule.cpp  RookRule.cpp  RuleEngine.cpp
tests/: board_mapper.cpp  board_tests.cpp  controller_tests.cpp  game_engine_tests.cpp  knight_rule_tests.cpp  motion_tests.cpp  pawn_rule_tests.cpp  piece_rule_tests.cpp  queen_rule_tests.cpp  rule_engine_tests.cpp
